# uim

./: .gitignore  Makefile.am  configure.ac
tqt/candwin/: Makefile.am  qt.cpp
tqt/chardict/: Makefile.am  kseparator.cpp  qt.cpp  unicodeviewwidget.cpp
tqt/immodule/: Makefile.am  quiminputcontext.cpp  subwindow.cpp
tqt/pref/: Makefile.am  customwidgets.cpp  kseparator.cpp  kseparator.h  qt.cpp
tqt/switcher/: Makefile.am  qt.cpp
tqt/toolbar/: Makefile.am  applet-tde.cpp  common-quimhelpertoolbar.cpp  common-uimstateindicator.h
xim/: Makefile.am
